# petsc-solver-study

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  git_version.cmake
docs/: phase1.md
include/: benchmark_result.hpp  git_version.h  linear_system.hpp  problem.hpp  problem_registry.hpp
include/problems/: bratu.hpp  poisson.hpp
scripts/: plot_results.py  run_benchmarks.py
src/: benchmark_result.cpp  linear_system.cpp  main.cpp  problem_registry.cpp
src/problems/: bratu.cpp  poisson.cpp
